Mas cambios del Selected

--- a/samples/stationTV/menu-settings.json
+++ b/samples/stationTV/menu-settings.json
@@ -4,6 +4,13 @@
         "type": "group",
         "items": [
             {
+                "name": "Test1",
+                "type": "group",
+                "items": [
+                    {}
+                ]
+            },
+            {
                 "key": "language",
                 "name": "Language",
                 "description": "Interface language of the program.",
