--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,16 +1,17 @@
 {
-	"recommendations": [
-	  "codeium.codeium",
-	  "mrcrowl.hg",
-	  "ms-vscode-remote.remote-ssh-edit",
-	  "ms-vscode-remote.remote-ssh",
-	  "ms-vscode-remote.vscode-remote-extensionpack",
-	  "ms-vscode.cmake-tools",
-	  "ms-vscode.cpptools-extension-pack",
-	  "ms-vscode.cpptools-themes",
-	  "ms-vscode.cpptools",
-	  "ms-vscode.makefile-tools",
-	  "ms-vscode.remote-explorer",
-	  "ms-vscode.remote-server",
-	],
-  }
+  "recommendations": [
+    "codeium.codeium",
+    "mrcrowl.hg",
+    "ms-vscode-remote.remote-ssh-edit",
+    "ms-vscode-remote.remote-ssh",
+    "ms-vscode-remote.vscode-remote-extensionpack",
+    "ms-vscode.cmake-tools",
+    "ms-vscode.cpptools-extension-pack",
+    "ms-vscode.cpptools-themes",
+    "ms-vscode.cpptools",
+    "ms-vscode.makefile-tools",
+    "ms-vscode.remote-explorer",
+    "ms-vscode.remote-server",
+    "slevesque.shader"
+  ]
+}
